# rust-chain

./: .env.example  Cargo.toml  README.md  test.http
contracts/: note.md
contracts/broadcast/Counter.s.sol/17000/: run-1746456853.json
contracts/script/: Counter.s.sol
src/: counter.json  counter.rs  main.rs  routes.rs
